examples/errors/enum_method_case/main.lc

enum Num {
  case One

  Show() {

  }

}

function main() {
  const a = One;
  a.Show();
}
